sixth attempt to fix mobile keyboard pushing content out of viewport

--- a/main/style.css
+++ b/main/style.css
@@ -50,15 +50,14 @@ body {
   color: var(--text, black);
   background: var(--bg, white);
   width: 100%;
+  height: 100vh;
+  font-family: 'Space Mono', monospace;
+  display: grid;
+  align-content: center;
 }
 
-body {
-  height: 100vh;
-  display: -ms-grid;
-  display: grid;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  font-family: 'Space Mono', monospace;
+.centered {
+height: 100%;
 }
 
 h1, p, a {
